# koto-log

./: .coverage  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  koto-log_create_issues.sh  pyproject.toml  render.yaml  開発計画.md
.claude/: launch.json
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-triage.yml  docs-sync.yml  security.yml
docs/: competitive-analysis.md  cost-projection.md  external-services.md  koto-log_issues_draft.md  koto-log_roadmap_v2_refined.md  rich-menu.md  security-and-improvement-analysis.md  user-manual.html
docs/adr/: 0001-scheduler-apscheduler-in-process.md  0002-token-usage-measurement.md  0003-admin-record-crud.md  0004-admin-menu-and-user-management.md  0005-multi-child-strategy.md  0006-p9-user-child-data-model.md
docs/eval-results/: README.md
evals/: compare.py  runner.py  scoring.py  tool_selection.py
evals/golden/: utterances.yaml
scripts/: sync_manual.py
src/kotolog/: __init__.py  cli.py  config.py  types.py  usage_report.py
src/kotolog/agent/: extractor.py  loop.py  prompts.py
src/kotolog/data/: growth_standards.json
src/kotolog/db/: connection.py  crud.py  migrations.py  schema.sql
src/kotolog/importer/: piyolog.py
src/kotolog/line/: _line_client.py  admin.py  csrf.py  dashboard.py  push.py  reply.py  (+3 more)
tests/: conftest.py  test_agent.py  test_cli.py  test_crud.py  test_executor.py  test_llm_client.py  test_timeparse.py
tests/e2e/: test_cli_flow.py  test_live_ollama.py
tests/integration/: test_agent.py  test_agent_child_resolve.py  test_approval_webhook_integration.py  test_children.py  test_cli.py  test_conversation_context.py  test_crud.py  test_db_concurrency.py  test_executor.py  test_line_handler.py  test_migrations.py  test_resolve_child.py  test_turso_live.py  test_upsert_user.py  test_usage_summary.py  test_user_approval.py
tests/unit/: test_admin_csrf.py  test_admin_records.py  test_admin_session_auth.py  test_agent_loop.py  test_compare.py  test_config.py  test_connection.py  test_dashboard.py  test_extractor.py  test_growth_dashboard.py  test_line_client.py  test_llm_client.py  test_morning_push.py  test_piyolog_importer.py  test_runner.py  test_scheduler_countdown.py  test_scheduler_fanout.py  test_scoring.py  test_security_auth.py  test_static_assets.py  test_subtype.py  test_timeparse.py  test_usage.py  test_usage_report.py  test_webhook_signature.py
(+19 files in other folders)
