[project]
name = "kotolog"
version = "0.1.0"
description = "育児記録エージェント（LINE × Tool Use）"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "litellm>=1.89.2",
    "python-dotenv>=1.2.2",
]

[project.scripts]
kotolog = "kotolog:main"

[build-system]
requires = ["uv_build>=0.8.8,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
