[project]
name = "kotolog"
version = "0.1.0"
description = "育児記録エージェント（LINE × Tool Use）"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "litellm>=1.89.2",
    "python-dotenv>=1.2.2",
]

[project.scripts]
kotolog = "kotolog.cli:main"

[build-system]
requires = ["uv_build>=0.8.8,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "ruff>=0.15.18",
]

[tool.ruff]
line-length = 110

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--import-mode=importlib"
markers = [
    "unit: 純ロジックの単体テスト（DB/ネットワーク非依存）",
    "integration: 実DB・複数コンポーネント結線の結合テスト",
    "e2e: 入口からの一気通しテスト",
    "live: 起動中の Ollama を要する（未起動なら自動スキップ）",
]
