[project]
name = "kotolog"
version = "0.1.0"
description = "育児記録エージェント（LINE × Tool Use）"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.10.4",
    "fastapi>=0.137.2",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "libsql-experimental>=0.0.55",
    "litellm>=1.89.2",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.20",
    "uvicorn>=0.49.0",
]

[project.scripts]
kotolog = "kotolog.cli:main"

[build-system]
requires = ["uv_build>=0.8.8,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.18",
]

[tool.ruff]
line-length = 110

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.coverage.run]
source = ["kotolog"]
omit = ["*/templates/*"]

[tool.coverage.report]
show_missing = true
skip_empty = true
sort = "Cover"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--import-mode=importlib"
markers = [
    "unit: 純ロジックの単体テスト（DB/ネットワーク非依存）",
    "integration: 実DB・複数コンポーネント結線の結合テスト",
    "e2e: 入口からの一気通しテスト",
    "live: 起動中の Ollama を要する（未起動なら自動スキップ）",
]
